# Shopping-System-Djagno

./: db.sqlite3  pyproject.toml
ShoppingSystem/: asgi.py  settings.py  urls.py  wsgi.py
shop/: models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_auto_20210415_2256.py  0003_alter_item_img.py
shop/templates/: items.html  main.html  navbar.html
