[tool.poetry]
name = "shopping-system-djagno"
version = "0.1.0"
description = ""
authors = ["17wilsjam <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
